welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: '=' expected but ';' found.
	var n:Int=nums.length
^