welcome.lessons.welcome.array.indexof.maxvalue.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
	var max=-9999
	var n:Int=nums.length
	for (k <- 0 to n-1){
		if (max<nums(k)){
			max=nums(k)
		}
	}
	for (i <- 0 to n-1){
		if (max==nums(i)){
			return i
		}
		
}
return 0
}
